# AIOps-Engine

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  test_ollama.py
docker/: docker-compose.yml
src/: main.py
src/config/: settings.py
src/decision/: reasoner.py
src/detection/: analyzer.py
src/execution/: k8s_executor.py
src/ingestion/: loki_collector.py  prom_collector.py
src/memory/: database.py
src/models/: incident.py
src/repositories/: incident_repo.py
src/schemas/: incident.py
src/static/: index.html
