[project]
name = "aiops-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "kubernetes>=35.0.0",
    "openai>=2.30.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
